# ardupilot_gazebo

./: .ycm_extra_conf.py  CMakeLists.txt  package.xml
gazebo_models/iris_with_standoffs_demo/: model.sdf
include/: ArdupilotIgitionPlugin.hh
models/iris_with_ardupilot/: model.sdf
src/: ArduCopterIRLockPlugin.cc  ArduCopterPlugin.cc  ArduPilotPlugin.cc
src/test/: test.cpp
